# libreport

./: configure.ac  libreport.spec.in
doc/: Makefile.am
po/: POTFILES.in  POTFILES.skip
src/client-python/: Makefile.am  __init__.py  clientmodule.c  debuginfo.py  opensuse_debuginfo.py
src/gtk-helpers/: Makefile.am  config_dialog.c  event_config_dialog.c  internal_libreport_gtk.h  workflow_config_dialog.c
src/gui-wizard-gtk/: Makefile.am  main.c  wizard.c  wizard.glade  workflow_test.c
src/include/: Makefile.am  config_item_info.h  event_config.h  internal_libreport.h  workflow.h
src/lib/: Makefile.am  config_item_info.c  event_config.c  event_xml_parser.c  file_list.c  json.c  workflow.c  workflow_xml_parser.c
src/plugins/: Makefile.am  reporter-mailx.c  rhbz.c
src/report-python/: Makefile.am  __init__.py  dump_dir.c  libreport-meh-test.py  problem_data.c  reportmodule.c  run_event.c
src/workflows/: Makefile.am  workflow_openSUSECCpp.xml.in
